--- a/packages/networking/http.yaml
+++ b/packages/networking/http.yaml
@@ -3,3 +3,6 @@
 http:
   ip_ban_enabled: true
   login_attempts_threshold: 10
+  use_x_forwarded_for: true
+  trusted_proxies:
+    - !secret reverse_proxy_ip
