Liter automation migrated natively

--- a/automations.yaml
+++ b/automations.yaml
@@ -1,1 +1,75 @@
-[]
+- id: '1688111538910'
+  alias: Litière Intelligente - Incrementation des passages dans la litière
+  description: '- But: Incrémente la valeur de `input_number.litter_tracking` a chaque
+    fois que du mouvement est détecté sur `binary_sensor.capteur_mouvement_litiere`
+
+    - Condition: `input_boolean.automation_clean_cat_litter_box` activé'
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.capteur_mouvement_litiere
+    to: 'on'
+  condition:
+  - condition: state
+    entity_id: input_boolean.automation_clean_cat_litter_box
+    state: 'on'
+  action:
+  - service: input_number.increment
+    data: {}
+    target:
+      entity_id: input_number.litter_tracking
+  mode: single
+- id: '1688112377959'
+  alias: Litière Intelligente - Notification litière pleine
+  description: '- But: Envoi une notification lorsque `binary_sensor.is_litter_full`
+    est activé
+
+    - Condition: `input_boolean.automation_clean_cat_litter_box` activé'
+  trigger:
+  - platform: state
+    entity_id:
+    - binary_sensor.is_litter_full
+    to: 'on'
+  condition:
+  - condition: state
+    entity_id: input_boolean.automation_clean_cat_litter_box
+    state: 'on'
+  action:
+  - event: NOTIFIER
+    event_data:
+      action: send_when_present
+      title: "\U0001F408  Litière"
+      message: Penser a nettoyer la litière !
+      callback:
+      - title: Litière Nettoyée
+        event: reset_litter_tracking
+      icon: mdi:cat
+      color: deep-orange
+      persistent: true
+      tag: litter_full
+      until:
+      - entity_id: binary_sensor.is_litter_full
+        new_state: 'off'
+  mode: single
+- id: '1688112671844'
+  alias: Litière Intelligente - Remise à zero de nombre de passage
+  description: '- But: Mettre a zero `input_number.litter_tracking` lorsque le bouton
+    `reset_litter_tracking` est appuyé
+
+    - Condition: `input_boolean.automation_clean_cat_litter_box` activé'
+  trigger:
+  - platform: event
+    event_type: mobile_app_notification_action
+    event_data:
+      action: reset_litter_tracking
+  condition:
+  - condition: state
+    entity_id: automation.litter_automation_reset
+    state: 'on'
+  action:
+  - service: input_number.set_value
+    data:
+      value: 0
+    target:
+      entity_id: input_number.litter_tracking
+  mode: single
